update docs/readme